--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <nav>
             <ul>
               <li class="nonprint"><a href="https://fb.com/letsquizNL" target=_blank>Live stream</a></li>
-              <li class="nonprint"><a href="https://cafelp.nl/doneren/" target=_blank>Doneer hier!</a></li>
               <li class="nonprint"><a href="https://letsquiz.nl/product/muziekbingo/" target=_blank>Muziekbingo bestellen?</a></li>
            </ul>
           </nav>
@@ -31,11 +30,9 @@
             <li class="nonprint">Tip: <a href="#" onClick="window.print(); return false">Print deze pagina</a>. Heb je een geprinte versie, dan kan er minder misgaan.</li>
             <li class="nonprint">Je kan je kaart groter of kleiner maken met Ctrl+ of Ctrl- (Cmd+ of Cmd- voor Mac)</li>
             <li class="nonprint">Alle links op deze pagina openen in een nieuw scherm.</li>
-            <li>Doneren kan op <a href="https://cafelp.nl/doneren" target=_blank>cafelp.nl/doneren</a></li> 
-            <li>De stream vind je op <a href="https://fb.com/letsquizNL" target="_blank">Facebook</a> of <a href="https://www.youtube.com/c/LetsQuizNL-pubquiz" target="_blank">YouTube</a></li>
-            <li><strong>Let op, we hebben een nieuw nummer!</strong> App je kaart naar: <a href="https://wa.me/31642402811" target="_blank">06-42402811</a></li>    
+            <li>De stream vind je op ons <a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target="_blank">YouTube kanaal</a>
+            <li>App je kaart naar: <a href="https://wa.me/31642402811" target="_blank">06-42402811</a></li>    
           </ul>
-          <a id="donate"href="https://cafelp.nl/doneren" target=_blank>DONEER HIER!</a>
         </div>
     </main>
     <footer><p>&copy; Let's Quiz - 2020</p></footer>
