Removed wrong link to FB

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <nav>
             <ul>
-              <li class="nonprint"><a href="https://fb.com/letsquizNL" target=_blank>Live stream</a></li>
+              <li class="nonprint"><a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target=_blank>Live stream</a></li>
               <li class="nonprint"><a href="https://letsquiz.nl/product/muziekbingo/" target=_blank>Muziekbingo bestellen?</a></li>
            </ul>
           </nav>
