--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <nav>
             <ul>
-              <li class="nonprint"><a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target=_blank>Live stream</a></li>
-              <li class="nonprint"><a href="https://letsquiz.nl/product/muziekbingo/" target=_blank>Muziekbingo bestellen?</a></li>
+              <li class="nonprint"><a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target=_blank>Livestream</a></li>
+              <li class="nonprint"><a href="https://letsquiz.nl/product/muziekbingo/" target=_blank>Order a music bingo?</a></li>
            </ul>
           </nav>
           </div>
@@ -25,13 +25,13 @@
     <main>
         <div id="main-div">
           <ul>
-            <li class="nonprint">Deze pagina werkt niet in Internet Explorer en Microsoft Edge. Gebruik een andere browser om deze pagina te bezoeken!</li>
-            <li class="nonprint">Ververs deze pagina niet! Je bingokaart gaat dan verloren.</li>
-            <li class="nonprint">Tip: <a href="#" onClick="window.print(); return false">Print deze pagina</a>. Heb je een geprinte versie, dan kan er minder misgaan.</li>
-            <li class="nonprint">Je kan je kaart groter of kleiner maken met Ctrl+ of Ctrl- (Cmd+ of Cmd- voor Mac)</li>
-            <li class="nonprint">Alle links op deze pagina openen in een nieuw scherm.</li>
-            <li>De stream vind je op ons <a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target="_blank">YouTube kanaal</a>
-            <li>App je kaart naar: <a href="https://wa.me/31642402811" target="_blank">06-42402811</a></li>    
+            <li class="nonprint">The bingo generator won't work in Internet Explorer or Microsoft Edge. Please use another browser to visit this page.</li>
+            <li class="nonprint">Don't refresh this page, you bingocard will be lost!</li>
+            <li class="nonprint">Tip: <a href="#" onClick="window.print(); return false">Print this page</a>. A printed page can't get refreshed accidentally :)</li>
+            <li class="nonprint">Resizing the card can be done with Ctrl+ of Ctrl- (Cmd+ of Cmd- voor Mac)</li>
+            <li class="nonprint">All links on this page open on a new page/tab.</li>
+            <li>Our livestream can ben found on our <a href="https://www.youtube.com/channel/UC04rW8w8PN86t5yXq-mmxig" target="_blank">YouTube-channel</a>
+            <li>WhatsApp a screenshot or photo your bingocard to: <a href="https://wa.me/31642402811" target="_blank">06-42402811</a></li>    
           </ul>
         </div>
     </main>
